tags alignments fixed

--- a/work-popup.css
+++ b/work-popup.css
@@ -282,4 +282,11 @@ h2 {
     color: white;
     border-radius: 3px;
   }
+
+  .box-tags-popup {
+    display: flex;
+    justify-content: flex-start;
+    list-style: none;
+    padding: 0%;
+  }
 }
